<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="0dp">


    <RelativeLayout
        android:id="@+id/innerBox1"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:background="#00BCD4"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/text1InInnerBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/text2InInnerBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            tools:ignore="HardcodedText"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/innerBox2"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:background="#00BCD4"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/text1InInnerBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/text2InInnerBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            tools:ignore="HardcodedText"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/innerBox3"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:background="#FF5722"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textInInnerBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:layout_alignParentTop="true"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/text2InInnerBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            tools:ignore="HardcodedText"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/innerBox4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#00BCD4"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/textInInnerBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_of_screen"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/innerBox5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#FF5722"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/textInInnerBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/innerBox6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="#FF5722"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_below="@id/innerBox5">

        <TextView
            android:id="@+id/textInInnerBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/innerBox7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="#FF5722"
        android:layout_alignParentStart="true"
        android:layout_below="@id/innerBox5"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/textInInnerBox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            tools:ignore="HardcodedText" />

    </RelativeLayout>
</RelativeLayout>
